updates for new OpenSHA jar