@@ -225,17 +225,17 @@ public class JpegImagesToMovie implements ControllerListener, DataSinkListener {
 				i++;
 				if (i >= args.length)
 					prUsage();
-				width = new Integer(args[i]).intValue();
+				width = Integer.valueOf(args[i]).intValue();
 			} else if (args[i].equals("-h")) {
 				i++;
 				if (i >= args.length)
 					prUsage();
-				height = new Integer(args[i]).intValue();
+				height = Integer.valueOf(args[i]).intValue();
 			} else if (args[i].equals("-f")) {
 				i++;
 				if (i >= args.length)
 					prUsage();
-				frameRate = new Integer(args[i]).intValue();
+				frameRate = Integer.valueOf(args[i]).intValue();
 			} else if (args[i].equals("-o")) {
 				i++;
 				if (i >= args.length)
